apps/dev/wallabag/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wallabag
  namespace: wallabag
  labels:
    app.kubernetes.io/name: wallabag
  annotations:
    gethomepage.dev/description: Dynamically Detected Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: wallabag.png
    gethomepage.dev/name: wallabag
    cert-manager.io/cluster-issuer: letsencrypt-staging

spec:
  rules:
    - host: "dev.int.wallabag.fr3d.dev"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wallabag
                port:
                  number: 80
            tls:
              - hosts:
                  - dev.int.wallabag.fr3d.dev
